Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-2043

Do not read stale checkpoint data

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.14.0
    • None

    Description

      Steps to reproduce:
       -  the agent starts up and creates a checkpoint directory of a non-empty flowfilerepository 

       -  allow the active flowfilerepository to be emptied out

       - trigger a flow update, it will not delete the existing checkpoint directory but use it regardless and reload stale flowfiles

      Attachments

        Activity

          People

            adebreceni Adam Debreceni
            adebreceni Adam Debreceni
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 20m
                20m