MINIFICPP-2043 Reset flowfile repo checkpoint during initialization

After a C2 update and reload, the flowfile checkpoint pointer was
pointing to outdated information, causing the flowfile repo to load
stale data.

Closes #1505
Signed-off-by: Marton Szasz <szaszm@apache.org>